cmake_minimum_required(VERSION 3.6)
project(antiblock_exe)
add_compile_options(-Wall -Wextra -Werror)
add_link_options()
add_subdirectory(hashmap)
include_directories(include hashmap/include) 
file(GLOB SRC "src/*.c")
add_executable(antiblock_exe ${SRC})
target_link_libraries(antiblock_exe hashmap curl)
install(TARGETS antiblock_exe DESTINATION /usr/bin)
