cmake_minimum_required(VERSION 3.6)
project(antiblock)
add_compile_options(-Wall -Wextra -Werror)
add_link_options()
add_subdirectory(hashmap)
include_directories(include hashmap/include) 
file(GLOB SRC "src/*.c")
add_executable(antiblock ${SRC})
target_link_libraries(antiblock hashmap curl)
install(TARGETS antiblock DESTINATION /usr/bin)
